--- a/top.css
+++ b/top.css
@@ -9,12 +9,13 @@ body, html {
   
   /* Sidebar */
   .sidebar {
-    width: 250px;
-    background-color: #22333B;
-    color: #fff;
+    background-color: var(--darker);
+    width: 220px;
+    padding-top: 2rem;
+    position: sticky;
+    top: 0;
     height: 100vh;
-    position: fixed;
-    padding-top: 30px;
+    overflow-y: auto;
   }
   
   .sidebar ul {
@@ -22,24 +23,23 @@ body, html {
     padding: 0;
   }
   
-  .sidebar ul li {
-    margin: 20px 0;
+  .sidebar li {
+    border-bottom: 1px solid var(--medium);
   }
   
-  .sidebar ul li a {
-    text-decoration: none;
-    color: #EAE0D5;
-    font-weight: 400;
-    padding: 10px 20px;
+  .sidebar li a {
     display: block;
-    transition: 0.3s;
+    padding: 1rem;
+    color: var(--light);
+    text-decoration: none;
+    font-size: 1rem;
+    transition: background 0.3s;
   }
   
-  .sidebar ul li a:hover,
-  .sidebar ul li a.active {
-    background-color: #C6AC8F;
-    color: #0A0908;
-    border-radius: 4px;
+  .sidebar li a:hover,
+  .sidebar li a.active {
+    background-color: var(--medium);
+    color: var(--light);
   }
   
   /* Main Content */
